상대 경로로 API 호출

--- a/CodeGen/CodeGen/Web/index.html
+++ b/CodeGen/CodeGen/Web/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>CodeGen</title>
     <script type="module" crossorigin>
-//assets/index.ad9d72a9.js
+//assets/index.de74b486.js
 const Hf=function(){const t=document.createElement("link").relList;if(t&&t.supports&&t.supports("modulepreload"))return;for(const l of document.querySelectorAll('link[rel="modulepreload"]'))r(l);new MutationObserver(l=>{for(const i of l)if(i.type==="childList")for(const o of i.addedNodes)o.tagName==="LINK"&&o.rel==="modulepreload"&&r(o)}).observe(document,{childList:!0,subtree:!0});function n(l){const i={};return l.integrity&&(i.integrity=l.integrity),l.referrerpolicy&&(i.referrerPolicy=l.referrerpolicy),l.crossorigin==="use-credentials"?i.credentials="include":l.crossorigin==="anonymous"?i.credentials="omit":i.credentials="same-origin",i}function r(l){if(l.ep)return;l.ep=!0;const i=n(l);fetch(l.href,i)}};Hf();var Vf=typeof globalThis!="undefined"?globalThis:typeof window!="undefined"?window:typeof global!="undefined"?global:typeof self!="undefined"?self:{},Vt={exports:{}},U={};/**
  * @license React
  * react.production.min.js
@@ -59,7 +59,7 @@ PERFORMANCE OF THIS SOFTWARE.
  *
  * This source code is licensed under the MIT license found in the
  * LICENSE file in the root directory of this source tree.
- */var Zv=Vt.exports,qv=Symbol.for("react.element"),bv=Symbol.for("react.fragment"),em=Object.prototype.hasOwnProperty,tm=Zv.__SECRET_INTERNALS_DO_NOT_USE_OR_YOU_WILL_BE_FIRED.ReactCurrentOwner,nm={key:!0,ref:!0,__self:!0,__source:!0};function Bf(e,t,n){var r,l={},i=null,o=null;n!==void 0&&(i=""+n),t.key!==void 0&&(i=""+t.key),t.ref!==void 0&&(o=t.ref);for(r in t)em.call(t,r)&&!nm.hasOwnProperty(r)&&(l[r]=t[r]);if(e&&e.defaultProps)for(r in t=e.defaultProps,t)l[r]===void 0&&(l[r]=t[r]);return{$$typeof:qv,type:e,key:i,ref:o,props:l,_owner:tm.current}}ti.Fragment=bv;ti.jsx=Bf;ti.jsxs=Bf;jf.exports=ti;const mn=jf.exports.jsx;function rm(){const[e,t]=Vt.exports.useState();return Vt.exports.useEffect(()=>{fetch("/code-gen-api").then(n=>n.json()).then(n=>t(n))},[]),mn("div",{className:"App",children:mn("header",{className:"App-header",children:e===void 0?mn("p",{children:"Loading..."}):mn("code",{children:e})})})}Mi.createRoot(document.getElementById("root")).render(mn(id.StrictMode,{children:mn(rm,{})}));
+ */var Zv=Vt.exports,qv=Symbol.for("react.element"),bv=Symbol.for("react.fragment"),em=Object.prototype.hasOwnProperty,tm=Zv.__SECRET_INTERNALS_DO_NOT_USE_OR_YOU_WILL_BE_FIRED.ReactCurrentOwner,nm={key:!0,ref:!0,__self:!0,__source:!0};function Bf(e,t,n){var r,l={},i=null,o=null;n!==void 0&&(i=""+n),t.key!==void 0&&(i=""+t.key),t.ref!==void 0&&(o=t.ref);for(r in t)em.call(t,r)&&!nm.hasOwnProperty(r)&&(l[r]=t[r]);if(e&&e.defaultProps)for(r in t=e.defaultProps,t)l[r]===void 0&&(l[r]=t[r]);return{$$typeof:qv,type:e,key:i,ref:o,props:l,_owner:tm.current}}ti.Fragment=bv;ti.jsx=Bf;ti.jsxs=Bf;jf.exports=ti;const mn=jf.exports.jsx;function rm(){const[e,t]=Vt.exports.useState();return Vt.exports.useEffect(()=>{fetch("code-gen-api").then(n=>n.json()).then(n=>t(n))},[]),mn("div",{className:"App",children:mn("header",{className:"App-header",children:e===void 0?mn("p",{children:"Loading..."}):mn("code",{children:e})})})}Mi.createRoot(document.getElementById("root")).render(mn(id.StrictMode,{children:mn(rm,{})}));
 
 </script>
     <style type="text/css">
